external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/package_name_empty/Move.snap
---
source: crates/move-package-alt/tests/parsing_tests.rs
---
error: package name cannot be empty
  ┌─ tests/data/manifest_parsing_invalid/package_name_empty/Move.toml:2:8
  │
2 │ name = ""
  │        ^^
